--- a/examples/archi/build.gradle
+++ b/examples/archi/build.gradle
@@ -40,6 +40,9 @@ task servicePrvDlJar(type: Jar) {
     dependsOn classes
     from sourceSets.main.output
     include('edu/pjatk/inn/coffeemaker/*')
+    include('edu/pjatk/inn/coffeemaker/impl/Drinker.class')
+    include('edu/pjatk/inn/coffeemaker/impl/Favourite.class')
+    include('edu/pjatk/inn/coffeemaker/impl/FavouriteServiceImpl.class')
     include('edu/pjatk/inn/coffeemaker/impl/Recipe.class')
     include('edu/pjatk/inn/coffeemaker/impl/Inventory.class')
     from sourceSets.main.resources
